--- a/config/database.yml
+++ b/config/database.yml
@@ -58,7 +58,7 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+test: &test
   <<: *default
   database: codeskull_test
 
@@ -86,3 +86,6 @@ production:
   database: codeskull_production
   username: codeskull
   password: <%= ENV['CODESKULL_DATABASE_PASSWORD'] %>
+
+cucumber:
+  <<: *test
