--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,10 @@ services:
     ports:
       - "9200:9200"
       - "9300:9300"
+  ruby:
+    image: alvarocantador/ruby-fiddle-exec
+    ports:
+      - "4567:4567"
   web:
     build: .
     command: bundle exec rails s -p 8080 -b '0.0.0.0'
@@ -18,3 +22,6 @@ services:
     depends_on:
       - db
       - elasticsearch
+      - ruby
+
+
