--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   db:
     image: postgres
   elasticsearch:
-    image: elasticsearch:latest
+    image: elasticsearch:2.4.1
     command: elasticsearch -Des.network.host=0.0.0.0
     ports:
       - "9200:9200"
@@ -12,6 +12,10 @@ services:
     image: alvarocantador/ruby-fiddle-exec
     ports:
       - "4567:4567"
+  java:
+    image: alvarocantador/java-fiddle-exec:latest
+    ports:
+      - "4568:4568"
   web:
     build: .
     command: bundle exec rails s -p 8080 -b '0.0.0.0'
